--- a/src/components/WarehouseSearch/WarehouseSearch.scss
+++ b/src/components/WarehouseSearch/WarehouseSearch.scss
@@ -63,12 +63,12 @@
     }
 
     &__title-action {
-        min-width: 4rem;
+        min-width: 3rem;
     }
 
     &__container {
         display: flex;
-        min-width: 10rem;
+        min-width: 9rem;
     }
 
     &__sort {
